<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JHU EventTrackr</string>
    <string name="title_facebook_login">Facebook Login</string>
    <string name="action_create_event">Create Event</string>
    <string name="action_search_event">Search Event</string>
    <string name="action_refresh_event">Refresh Event</string>
    <string name="action_map">Map</string>
    <string name="action_event_filters">Event Filters</string>
    <string name="action_event_list">List of Events</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="fblogin_descriptor">Facebook Login</string>
    <string name="logo_descriptor">JHU EventTrackr</string>
    <string name="action_add_filter">Add Filter</string>
    <string name="hint_filter_name">Filter Name</string>
    <string name="title_new_filter">New Filter</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="discard_button">Discard</string>
    <string name="time_filter">Show Events Within:</string>

    <color name="black">#000000</color>

    <string name="app_id">228051370735450</string>
    <string name="title_activity_filter">Event Filters</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_profile_fragment">Profile Settings</string>
    <string name="title_activity_privacy_fragment">Privacy Settings</string>
    <string name="what_is">What is this?</string>
    <string name="title_activity_notifiaction_fragment">Notifiaction Settings</string>
    <string name="title_activity_about_fragment">About</string>
    <string name="about_title">JHU EventTrackr version 1.0</string>
    <string name="about_description">Users can search, filter, and find relavent events around their location...</string>
    <string name="title_activity_create_event">Create an Event</string>
    <string name="hello_world">Hello world!</string>
    <string name="create_event_title_hint">Title</string>
    <string name="create_event_date_hint">Date</string>
    <string name="create_event_start_time_hint">Start Time</string>
    <string name="create_event_end_time_hint">End Time</string>
    <string name="create_event_location_hint">Location</string>
    <string name="create_event_location_button_text">Select Location</string>
    <string name="create_event_description_hint">Description</string>
    <string name="create_event_ok">Create Event</string>
    <string name="edit_event_title_hint">Title</string>
    <string name="edit_event_date_hint">Date</string>
    <string name="edit_event_start_time_hint">Start Time</string>
    <string name="edit_event_end_time_hint">End Time</string>
    <string name="edit_event_location_hint">Location</string>
        <string name="edit_event_location_button_text">Change Location</string>
    <string name="edit_event_description_hint">Description</string>
    <string name="edit_event_ok">Save Changes</string>
    <string name="title_activity_select_location">Select a Location</string>
    <string name="title_activity_event_list">List of Events</string>
    <string name="blank"></string>
    <string name="title_activity_edit_event">Edit an Event</string>

</resources>