<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_add"
          android:icon="@drawable/ic_action_new"
          android:title="@string/action_add_filter"
          android:showAsAction="always"
          android:onClick="addFilter" />

    <!-- MENU OPTIONS -->
    <item
        android:id="@+id/action_enter_map"
        android:onClick="enterMap"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_map"/>
    <item
        android:id="@+id/action_enter_event_list"
        android:onClick="enterEventList"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_event_list"/>
    <item
        android:id="@+id/action_settings"
        android:onClick="enterSettings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_logout"
        android:onClick="logoutApp"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
</menu>
