<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
         item
        android:id="@+id/action_serach_event"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="@string/action_search_event"
        android:actionViewClass="android.widget.SearchView"/>
    -->
    <item
        android:id="@+id/refresh_button_map"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/action_refresh_event"/>
    <item
        android:id="@+id/action_enter_event_list"
        android:onClick="enterEventList"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_event_list"/>
    <item
        android:id="@+id/action_event_filters"
        android:onClick="enterFilters"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_event_filters"/>
    <item
        android:id="@+id/action_settings"
        android:onClick="enterSettings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_logout"
        android:onClick="logoutApp"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>

</menu>